Media query inclusao

--- a/index.html
+++ b/index.html
@@ -35,35 +35,35 @@
                         <img src="./img/juliano.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Juliano</h3>
-                            <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="500" value="55">55</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="55">55</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
                         <img src="./img/candida.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Cândida</h3>
-                            <progress  style="height: 26px; width: 160px" id="progress" min="0" step="35" max="500" value="35">35</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="35">35</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
                         <img src="./img/kelly.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Kelly</h3>
-                            <progress  style="height: 26px; width: 160px" id="progress" min="0" step="35" max="500" value="35">35</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="35">35</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
                         <img src="./img/carlinhos.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Carlinhos</h3>
-                            <progress  style="height: 26px; width: 160px" id="progress" min="0" step="0" max="500" value="0">0</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
                         <img src="./img/candice.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Candice</h3>
-                            <progress  style="height: 26px; width: 160px" id="progress" min="0" step="0" max="500" value="0">0</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
                         </div>
                     </div>
                 </div>
