--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <input class="combo__pesquisa" type="text" placeholder="Pesquise pelo seu produto.">
 
-        <div class="card__pagamento">
+        <!-- <div class="card__pagamento">
             <img class="logo__pix" src="./img/logoPix.png" alt="logo pix">
             <p><strong>PIX: </strong>016.196.220-33</p>
-        </div>
+        </div> -->
     </header>
     <main>
         <div class="area__principal">
