incluir logo na aba da página

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" />
+    <link rel="shortcut icon" type="imagex/png" href="/img/logo.ico">
 </head>
 <body>
     <header>
