ui ux filtro, maiores compradores e meta

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="area__principal">
             <div class="filtros_top">
                 <div class="filtros">
-                    <h2>filtros</h2>
+                    <h2>Filtros</h2>
                     <p>Em breve</p>
                 </div>
                 <div class="top">
