adicionar pack heineken

--- a/index.html
+++ b/index.html
@@ -144,17 +144,6 @@
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
-                        <img src="./img/tirerrucaMerlot.jpeg">
-                    </div>
-                    <h1>Tierruca</h1>
-                    <div class="garrafas_tags">
-                        <p class="tinto">Tinto</p>
-                        <p class="merlot">Merlot</p>
-                    </div>
-                    <h2><strong>R$ 50</strong></h2>
-                </div>
-                <div class="card__garrafa">
-                    <div class="garrafa__imagem">
                         <img src="./img/trapiche_cabernet_s.jpeg">
                     </div>
                     <h1>Trapiche</h1>
@@ -163,6 +152,16 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 60</strong></h2>
+                </div>
+                <div class="card__garrafa">
+                    <div class="garrafa__imagem">
+                        <img src="./img/pack_heineken.webp">
+                    </div>
+                    <h1>Pack Heineken</h1>
+                    <div class="garrafas_tags">
+                        <p class="cerveja">Cerveja</p>
+                    </div>
+                    <h2><strong>R$ 50</strong></h2>
                 </div>
             </div>
 
