--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 55</strong></h2>
+                    <p class="unidade">7 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -98,6 +99,7 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 65</strong></h2>
+                    <p class="unidade">4 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -108,6 +110,7 @@
                         <p class="brut">Brut</p>
                     </div>
                     <h2><strong>R$ 35</strong></h2>
+                    <p class="unidade">10 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -119,6 +122,7 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 35</strong></h2>
+                    <p class="unidade">2 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -130,6 +134,7 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 45</strong></h2>
+                    <p class="unidade">4 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -141,6 +146,7 @@
                         <p class="sauvignon_blanc">Sauvignon Blanc</p>
                     </div>
                     <h2><strong>R$ 40</strong></h2>
+                    <p class="unidade">3 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -152,6 +158,7 @@
                         <p class="cabert_sauvignon">Cabernet Sauvignon</p>
                     </div>
                     <h2><strong>R$ 60</strong></h2>
+                    <p class="unidade">4 unidades</p>
                 </div>
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
@@ -162,6 +169,7 @@
                         <p class="cerveja">Cerveja</p>
                     </div>
                     <h2><strong>R$ 50</strong></h2>
+                    <p class="unidade">4 unidades</p>
                 </div>
             </div>
 
