Atualizar pessoas maiores compradores

--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
                             <progress id="progress" min="0" step="1" max="500" value="35">35</progress>
                         </div>
                     </div>
+                    <div class="top__usuario">
+                        <img src="./img/camille.png" alt="imagem">
+                        <div class="usuario__info">
+                            <h3>Camille</h3>
+                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
+                        </div>
+                    </div>
+                    <div class="top__usuario">
+                        <img src="./img/Carlo.png" alt="imagem">
+                        <div class="usuario__info">
+                            <h3>Carlo</h3>
+                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
+                        </div>
+                    </div>
+                    <div class="top__usuario">
+                        <img src="./img/surian.jpeg" alt="imagem">
+                        <div class="usuario__info">
+                            <h3>Surian</h3>
+                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
+                        </div>
+                    </div>
                 </div>
                 <div class="meta">
                     <h2>Meta</h2>
