atualizar placar e quantidade

--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
 <body>
     <header>
         <img class="logo__loja" src="./img/logo.jpg" alt="logo loja">
-
         <input class="combo__pesquisa" type="text" placeholder="Pesquise pelo seu produto.">
-
-        <!-- <div class="card__pagamento">
-            <img class="logo__pix" src="./img/logoPix.png" alt="logo pix">
-            <p><strong>PIX: </strong>016.196.220-33</p>
-        </div> -->
     </header>
     <main>
         <div class="area__principal">
@@ -40,24 +34,24 @@
                         </div>
                     </div>
                     <div class="top__usuario">
-                        <img src="./img/juliano.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Juliano</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="55">55</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
                         <img src="./img/candice.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Candice</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="50">50</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="100">100</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
                         <img src="./img/candida.jpeg" alt="imagem">
                         <div class="usuario__info">
                             <h3>Cândida</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="35">35</progress>
+                            <progress id="progress" min="0" step="1" max="500" value="70">70</progress>
+                        </div>
+                    </div>
+                    <div class="top__usuario">
+                        <img src="./img/juliano.jpeg" alt="imagem">
+                        <div class="usuario__info">
+                            <h3>Juliano</h3>
+                            <progress id="progress" min="0" step="1" max="500" value="55">55</progress>
                         </div>
                     </div>
                     <div class="top__usuario">
@@ -94,10 +88,10 @@
                     <div class="fogao__imagem">
                         <img src="./img/fogao.jpeg" alt="foto do fogão">
                     </div>
-                    <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="1400" value="35">75</progress>
+                    <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="1400" value="55">55</progress>
                 </div>
             </div>
-            <div class="garrafas">
+            <div class="garrafas" id="garrafas">
                 <div class="card__garrafa">
                     <div class="garrafa__imagem">
                         <img src="./img/casaSilva.webp">
@@ -197,6 +191,6 @@
         </div>
 
     </main>
-
 </body>
+<script src="./index.js"></script>
 </html>
