--- a/index.html
+++ b/index.html
@@ -24,71 +24,15 @@
                     <h2>Filtros</h2>
                     <p>Em breve</p>
                 </div>
-                <div class="top">
+                <div class="top" id="top">
                     <h2>Maiores compradores</h2>
-                    <div class="top__usuario">
-                        <img src="./img/carlinhos.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Carlinhos</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="140">140</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/candice.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Candice</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="100">100</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/candida.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Cândida</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="70">70</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/juliano.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Juliano</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="55">55</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/kelly.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Kelly</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="35">35</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/camille.png" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Camille</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/Carlo.png" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Carlo</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
-                        </div>
-                    </div>
-                    <div class="top__usuario">
-                        <img src="./img/surian.jpeg" alt="imagem">
-                        <div class="usuario__info">
-                            <h3>Surian</h3>
-                            <progress id="progress" min="0" step="1" max="500" value="0">0</progress>
-                        </div>
-                    </div>
                 </div>
-                <div class="meta">
+                <div class="meta" id="meta">
                     <h2>Meta</h2>
-                    <div class="fogao__imagem">
+                    <!-- <div class="fogao__imagem">
                         <img src="./img/fogao.jpeg" alt="foto do fogão">
                     </div>
-                    <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="1400" value="55">55</progress>
+                    <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="1400" value="55">55</progress> -->
                 </div>
             </div>
             <div class="garrafas" id="garrafas">
@@ -97,4 +41,6 @@
     </main>
 </body>
 <script src="./js/main.js"></script>
+<script src="./js/maioresCompradores.js"></script>
+<script src="./js/meta.js"></script>
 </html>
