--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <img class="logo__loja" src="./img/logo.jpg" alt="logo loja">
-        <input class="combo__pesquisa" type="text" placeholder="Pesquise pelo seu produto.">
+        <input class="combo__pesquisa" type="text" placeholder="Pesquise pelo seu produto." id="filtro">
     </header>
     <main>
         <div class="area__principal">
@@ -29,10 +29,6 @@
                 </div>
                 <div class="meta" id="meta">
                     <h2>Meta</h2>
-                    <!-- <div class="fogao__imagem">
-                        <img src="./img/fogao.jpeg" alt="foto do fogão">
-                    </div>
-                    <progress  style="height: 26px; width: 160px" id="progress" min="0" step="1" max="1400" value="55">55</progress> -->
                 </div>
             </div>
             <div class="garrafas" id="garrafas">
