--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <header>
         <img class="logo__loja" src="./img/logo.jpg" alt="logo loja">
         <input class="combo__pesquisa" type="text" placeholder="Pesquise pelo seu produto." id="filtro">
+        <div class="carrinho">
+            <p>R$</p>
+            <p class="total">0</p>
+            <button class="pagar">Pagar</button>
+        </div>
     </header>
     <main>
         <div class="area__principal">
@@ -39,4 +44,5 @@
 <script src="./js/main.js"></script>
 <script src="./js/maioresCompradores.js"></script>
 <script src="./js/meta.js"></script>
+<script src="./js/carrinho.js"></script>
 </html>
