alteração layout exibe meta

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="carrinho">
             <p>R$</p>
             <p class="total">0</p>
-            <button class="pagar">Pagar (EM BREVE)</button>
         </div>
+        <a href="./historicoVendas.html" class="pagar">Histórico de vendas</a>
     </header>
     <main>
         <div class="area__principal">
@@ -35,11 +35,11 @@
                 <div class="top" id="top">
                     <h2>Maiores compradores</h2>
                 </div>
-                <div class="meta" id="meta">
-                    <h2>Meta</h2>
-                </div>
             </div>
             <div class="garrafas" id="garrafas">
+            </div>
+            <div class="meta" id="meta">  
+                <h2>Metas</h2>
             </div>
         </div>
     </main>
