historico de vendas mobile

--- a/historicoVendas.html
+++ b/historicoVendas.html
@@ -21,10 +21,13 @@
         <a href="./index.html" class="nav">Home</a>
     </header>
     <main>
-        <div class="vendas">
+        <div class="vendas" id="vendas">
 
         </div>
     </main>
+    <footer>
+        <img class="logo__loja" src="./img/logo.jpg" alt="logo loja">
+    </footer>
 </body>
 <script src="./js/vendas.js"></script>
 </html>
