separar componentes em blocos

--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
             </div>
             <div class="garrafas" id="garrafas">
             </div>
-            <div class="meta" id="meta">  
-                <h2>Metas</h2>
+            <div class="meta_area">
+                <div class="meta" id="meta">  
+                    <h2>Metas</h2>
+                </div>
             </div>
+
         </div>
     </main>
 </body>
